# sc-evdev

./: Cargo.toml  README.md
src/: main.rs
src/virtual_controllers/: dualsense.rs  mod.rs
